# pironman5

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  config.txt  install.py  install_lgpio.sh  pyproject.toml  sunfounder-pironman5.dtbo  sunfounder-pironman5mini.dtbo  sunfounder-pironman5nas.dtbo  sunfounder-pironman5promax.dtbo  test.py
docs/: requirements.txt
docs/source/: 6_hardware.rst  assemble_camera.rst  assembly_instructions.rst  compitable_nvme_ssd.rst  conf.py  dashboard.rst  faq.rst  index.rst  intro_pironman5.rst  intro_pironman5_mini.rst  set_up_home_assistant.rst  set_up_pironman5.rst  set_up_rpi_os.rst  setup_pironman.rst  what_do_we_need.rst
docs/source/_static/: lang.js
docs/source/advanced/: advanced.rst  batocera_os.rst  booting_from_ssd.rst  control_with_commmands.rst  fans.rst  features.rst  hdmi_adapter.rst  io_board.rst  microsd_extender.rst  nvme_pip.rst  oled_screen.rst  power_switch_conventor.rst  tower_cooler.rst
docs/source/appendix/: appendix.rst  install_openssh_powershell.rst
docs/source/control/: control_pironman5.rst  control_with dashboard.rst  (+1 more)
overlays/: sunfounder-pionman5promax.dtbo  sunfounder-pironman5promax.dtbo
pironman5/: __init__.py  _cli.py  _constants.py  _launch_browser.py  api.py  api_server.py  app_info.py  config.json  fan.py  ha_api.py  i2c.py  logger.py  main.py  oled.py  pironman5.py  system_status.py  utils.py  version.py  ws2812_RGB.py
pironman5/variants/: __init__.py  pironman5.py  pironman5_max.py  pironman5_mini.py  pironman5_nas.py  pironman5_pro_max.py  pironman5_ups.py  pironman5v10.py
scripts/: install_lgpio.sh  install_pipower5_device.sh  setup_influxdb.sh  setup_pipower5.sh  setup_rtl8125.sh  softlink_to_gpiochip4.sh  test_dpkg_lock.sh  upload-1.2.ps1  wait_for_dpkg.sh
tests/: read_variants.py  usgae.md
tools/: sf_installer.py
(+217 files in other folders)
